[package]
name = "blog-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/lib.rs"

[[bin]]
name = "weblog"
path = "src/main.rs"

[dependencies]
chrono = "0.4.34"
text-diff = "0.4.0"
walkdir = "2.3.3"
